--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,10 @@ services:
 
   api:
     build: .
-    command: sh -c "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
+    command: >
+      sh -c "alembic revision --autogenerate -m 'first' &&
+             alembic upgrade head &&
+             uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
     volumes:
       - ./:/app
 
@@ -30,7 +33,6 @@ services:
       - "8000:8000"
 
     environment:
-      - DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/api
       - DB_USER=postgres
       - DB_PASSWORD=postgres
       - DB_NAME=api
