--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+alembic==1.8.1
+psycopg2==2.9.4
 asyncpg==0.24.0
 fastapi==0.68.1
 sqlmodel==0.0.4
@@ -5,4 +7,7 @@ uvicorn==0.15.0
 redis_om==0.0.27
 pydantic==1.10.2
 databases==0.6.1
+email-validator==1.3.0
+
+
 
