--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,13 @@ services:
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=api
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
+
+    volumes:
+      - db:/var/lib/postgresql/data
+
 
   redis:
     image: redis:latest
@@ -33,13 +37,23 @@ services:
       - "8000:8000"
 
     environment:
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
-      - DB_NAME=api
-      - DB_HOST=db
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - REDIS_PASSWORD=eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
+      - DATABASE_URL=${DATABASE_URL}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
+      - DB_HOST=${DB_HOST}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - APP_SECRET_STRING=${APP_SECRET_STRING}
+      - DOMAIN=${DOMAIN}
+      - API_AUDIENCE=${API_AUDIENCE}
+      - ISSUER=${ISSUER}
+      - ALGORITHMS=${ALGORITHMS}
     depends_on:
       - db
       - redis
+
+volumes:
+  db:
+    driver: local
