--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ asyncpg==0.24.0
 fastapi==0.80.0
 sqlmodel==0.0.4
 uvicorn==0.15.0
-redis_om==0.0.27
+aioredis==2.0.1
 pydantic==1.10.2
 databases==0.6.1
 email-validator==1.3.0
