--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm+all,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm+all,python
-
 ### PyCharm+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
+**/.DS_Store
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
@@ -251,4 +250,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# End of https://www.toptal.com/developers/gitignore/api/pycharm+all,python
+
+# End of https://www.toptal.com/developers/gitignore/api/pycharm+all,python.DS_Store
