--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,8 @@ passlib==1.7.4
 SQLAlchemy==1.4.41
 cryptography==38.0.1
 aiofiles==22.1.0
+pytest==7.2.0
+requests==2.28.1
+installed freezegun==1.2.2
+
 
