--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -39,7 +39,7 @@ build:
       - alembic upgrade head 
       
 run:
-  runtime-version: 3.10
+  runtime-version: lattest
   network:
     port: 8000
   command: uvicorn main:app --reload
