--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -39,8 +39,7 @@ build:
       - alembic upgrade head 
       
 run:
-  runtime-version: lattest
   network:
     port: 8000
-  command: uvicorn main:app --reload
+  command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
   
