--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -63,5 +63,5 @@ run:
     - name: ALGORITHMS
       value: "RS256"
   
-  command: uvicorn main:app --reload
+  command: uvicorn main:app --host 0.0.0.0 --port 8080 --reload
   
