--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       uses: aws-actions/configure-aws-credentials@v1
       with: 
         aws-access-key-id : ${{ secrets.AWS_ACCESS_KEY }}
-        aws-secret-access_key : ${{ secrets.AWS_SECRET_KEY }}
+        aws-secret-access-key : ${{ secrets.AWS_SECRET_KEY }}
         aws-region : ${{ env.AWS_REGION_NAME }}
         
     - name: Copy deploymen packege to S3 bucket
