--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
         --application-name ${{ env.EB_APLICATION_NAME }} \
         --source-bundle S3Bucket="${{ env.S3_BUCKET_NAME }}",S3Key="${{ env.DEPLOY_PACKAGE_NAME }}" \
         --version-label "Ver-${{ github.sha }}" \
-        --description "CommitSHA-{{ github.sha }}"
+        --description "CommitSHA-${{ github.sha }}"
       
     - name: Deploy new ElasticBeanstalk App Version 
       run: aws elasticbeanstalk update-environment --environment-name ${{ env.EB_ENV_NAME }} --version-label "Ver-${{ github.sha }}"
