--- a/.ebextensions/01_fastapi.config
+++ b/.ebextensions/01_fastapi.config
@@ -7,5 +7,5 @@ option_settings:
     ProxyServer: apache
 container_commands:
   01_initdb:
-    command: "source /var/app/venv/*/bin/activate && pip install -r requiremnts.txt && alembic upgrade head"
+    command: "source /var/app/venv/*/bin/activate && pip install -r requirements.txt && alembic upgrade head"
     leader_only: true
