--- a/.ebextensions/01_fastapi.config
+++ b/.ebextensions/01_fastapi.config
@@ -1,3 +1,10 @@
+option_settings:
+  aws:elasticbeanstalk:application:environment:
+    PYTHONPATH: "/var/app/current:$PYTHONPATH"
+  aws:elasticbeanstalk:container:python:
+    WSGIPath: "main:app"
+  aws:elasticbeanstalk:environment:proxy:
+    ProxyServer: apache
 container_commands:
   01_initdb:
     command: "source /var/app/venv/*/bin/activate && pip install -r requirements.txt && alembic upgrade head"
